Fix overflow in dropdown content

--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -92,6 +92,7 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.2);
+  overflow-x: hidden;
   overflow-y: auto;
   max-height: 90%;
   z-index: 99;
